# esp32-led-matrix

./: LICENSE  README.md
docs/: LICENSE  购置清单.md
firmware/: CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults  test.c
firmware/.cache/clangd/index/: DOOM_WITHOUT_DSPS.c.CB3619F1AC5099BD.idx  FLIP_WITHOUT_DSPS.c.1FC126C9095E4D62.idx  aes3_tie_log.c.20DB795091BFEA21.idx  doom.c.257920AB7CC9B38C.idx  doom.h.AFC1AEC3E71DB12F.idx  dsp_common.h.DAADE45FFEA3D68C.idx  dsp_err.h.A78D0AB488764806.idx  dsp_err_codes.h.DE5340BC0F70E975.idx  dsp_tests.h.0FB846B46DB20768.idx  dsp_types.h.4387ECDACF203970.idx  dspi_conv.h.426A9EA239BEFFE8.idx  dspi_conv_f32_ansi.c.8F432582242CB751.idx  dspi_dotprod.h.8F56D574218ABC23.idx  dspi_dotprod_f32_ansi.c.998AC783BF716F54.idx  dspi_dotprod_off_f32_ansi.c.741DA84F7F1E0002.idx  (+261 more)
firmware/components/BSP/: CMakeLists.txt
firmware/components/BSP/KEY/: key.c  key.h
firmware/components/BSP/RGB/: panel_config.h  rgb.c  rgb.h
firmware/components/BSP/UART/: uart.c  uart.h
firmware/components/Middlewares/: CMakeLists.txt
firmware/components/Middlewares/DOOM/: DOOM_WITHOUT_DSPS.c  doom.c  doom.h
firmware/components/Middlewares/FLIP/: FLIP_WITHOUT_DSPS.c  flip.c  flip.h
firmware/components/Middlewares/GRAVITY/: gravity.c  gravity.h  mpu6050_gravity.c  mpu6050_gravity.h
firmware/components/Middlewares/SIM/: fire_sim.c  fire_sim.h  sim_manager.c  sim_manager.h  water_sim.c  water_sim.h
firmware/main/: idf_component.yml  main.c
hardware/: ProDoc_PCB1.epro2  ProPrj_灯板FLIP.epro2  README.md
水流灯板简易复刻固件/: 必读.txt
